# sokoban

./: .gitignore  Cargo.toml  package-lock.json  package.json  webpack.config.js
src/: constants.rs  game.rs  lib.rs  sprite.rs  utils.rs
src/engine/: events.rs  mod.rs
static/: index.html  index.js
