[package]
name = "sokoban"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
futures = "0.3.30"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.43"

[dependencies.web-sys]
version = "0.3.70"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "Performance",
  "PointerEvent",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
js-sys = "0.3.70"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

